Add cache mechanism for anilist API Rename certain methods to reflect the usage more Add thumbnail transition for content lists Remove unused methods Add new class to expand series' details.

--- a/Cafeine/Views/ItemDetailsPage.xaml
+++ b/Cafeine/Views/ItemDetailsPage.xaml
@@ -345,10 +345,11 @@
                         <GridView
                             x:Name="episodesitem"
                             Canvas.ZIndex="-1"
+                            ContainerContentChanging="Episodesitem_ContainerContentChanging"
                             ItemsSource="{x:Bind Path=Vm.Episodelist, Mode=OneWay}"
                             Visibility="{x:Bind Path=Vm.LoadEpisodeLists.Value, Mode=OneWay}">
                             <GridView.ItemTemplate>
-                                <DataTemplate x:DataType="model:Episode">
+                                <DataTemplate x:DataType="model:ContentList">
                                     <RelativePanel Height="81">
                                         <Image
                                             x:Name="Thumbnail"
@@ -356,9 +357,6 @@
                                             Width="144"
                                             MaxHeight="81"
                                             HorizontalAlignment="Left"
-                                            x:Phase="2"
-                                            ImageOpened="{x:Bind ImageOpened}"
-                                            Loaded="{x:Bind Path=Thumbnail_Loaded, Mode=OneWay}"
                                             Opacity="0"
                                             Stretch="UniformToFill" />
                                         <StackPanel
